# dataplot

./: README.md  metadata.yml  pyproject.toml  setup.py  tests.py
.github/workflows/: python-publish.yml
dataplot/: __init__.py  core.py  dataset.py  histogram.py  linechart.py  setter.py
examples/: examples.ipynb  test.ipynb  tests.ipynb
src/: __init__.py  _typing.py  artist.py  container.py  core.py  dataset.py  histogram.py  ksplot.py  linechart.py  plotter.py  qqplot.py  setter.py
src/artist/: __init__.py  base.py  corrmap.py  histogram.py  ksplot.py  linechart.py  ppplot.py  qqplot.py
src/dataplot/: __init__.py  _typing.py  container.py  core.py  data.py  database.py  dataset.py  plottable.py  setting.py
src/dataplot/artist/: __init__.py  base.py  corrmap.py  histogram.py  ksplot.py  linechart.py  ppplot.py  qqplot.py  scatterchart.py
src/dataplot/utils/: math.py  multi.py
src/utils/: __init__.py  multi.py  multis.py
tests/: test_core_and_container.py  test_dataset_rank_normalize.py  test_dataset_ranknorm.py  test_dataset_resample.py  test_utils_math.py  test_utils_multi.py
