[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataplot"
version = "0.1.7"
dependencies = [
    "validating",
    "lazyr",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
]
requires-python = ">=3.13"
authors = [
  {name = "Chitaoji", email = "2360742040@qq.com"},
]
maintainers = [
  {name = "Chitaoji", email = "2360742040@qq.com"}
]
description = "Provides plotting tools useful in datascience."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["plot"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Documentation = "https://github.com/Chitaoji/dataplot/blob/main/README.md"
Repository = "https://github.com/Chitaoji/dataplot/"
